--- a/manifest.json
+++ b/manifest.json
@@ -22,5 +22,10 @@
     "storage",
     "https://*.plaid.com/*"
   ],
-  "options_page": "options.html"
+  "options_page": "options.html",
+  "web_accessible_resources": [
+    "*.html",
+    "*.css",
+    "*.js"
+  ]
 }
