--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,11 @@
       "background.js"
     ]
   },
+  "icons": { 
+    "16": "/img/icon16.png",
+    "48": "/img/icon48.png",
+   "128": "/img/icon128.png" 
+  },
   "content_scripts": [
     {
       "matches": [
